# topology-viewer

./: README.md  plan.md  topology-viewer.code-workspace
backend/: pyproject.toml  requirements.txt
backend/app/: crud.py  main.py  models.py  schemas.py  topology_generators.py
frontend/src/: App.jsx  App.tsx  main.jsx  styles.css
frontend/src/components/Sidebar/: GeneratorSection.tsx
